--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello welcome on reyad page </h1>
+    <h1>Hello welcome on new branch </h1>
     <script src="app.js">
 
     </script>
